--- a/index.html
+++ b/index.html
@@ -1,37 +1,36 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
-    <!-- https://validator.w3.org/#validate_by_input -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Masodik weboldalam!</title>
+    <title>Bemutatkozás!</title>
+    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="js.js">
 </head>
 <body>
-    <p>s==ÁTHUZÁS</p>
-    <p><blockquote cite="www.w3.org/Protocols/LanguageFeatures">Valahonann idézni akarunk </blockquote></p>
-    <abbr title="Copyright">megfeloe Copyright</abbr>
-    <hr>
-    <p>időre <time>8 óra</time></p>
-    <dl>
-        <dt>Kalapacs</dt>
-        <dd>Egy szerszám</dd>
-    </dl>
-    <ol type="a">
-        <li>szam</li>
-        <li>masodik szam</li>
-    </ol>
-    <a href="mailto:kalapacs@gmail.com" target="_blank">kalapacs mail</a>
-    <figure>
-        <figcaption></figcaption>
-    </figure>
-    <main>egyedi tartalomnak kell lenni</main>
-    <nav>navigácio</nav>
-    <article>blog,post,comment</article>
-    <footer>lábjegyzet</footer>
-    <div>bármihez</div>
+    <div id="nav" id="valtakozo"><a href="">GO Home!</a> <a href="index.html">Refresh</a> </div>
+<main>
+    <div class="bemutatkozás" id="a1">
+    <strong ><h1 class="szam alma" >A nevem <br><abbr title="BY NAGY VIKTOR"> Nagy Viktor!</abbr></h1></strong>
+    <h3 id="doboz" class="doboz2">Kreatív és innovatív informatikus, több, mint 6 év szakmai tapasztalattal. Az előző munkahelyen az adatvizualizációs rendszer hatékonyságának növelése 17 százalékkal, valamint 14 alkalmazás fejlesztésében vettem részt. Olyan munkát keresek, amelyben kamatoztathatom a programozói és webfejlesztői képességeimet.</h2>
+        
+        <h1 class="alma" style="text-decoration:underline ;">
+            Készségek, képességek:
+        </h1>
+        <h3 id="doboz" class="doboz2" >
+        <li>javascipt</li>
+        <li>HTML</li>
+        <li>SQL</li>
+        <li>Önálló munkavégzés</li>
+        <li>Rugalmas hozzáállás</li>
+        </h3>
     
-    <link rel="stylesheet" href="2. weboldalam.html">
+    <h2 class="alma" style="text-decoration:underline ;">Nyelvtudás</h2>
+    <h3 id="doboz">Angol – tárgyalóképes nyelvtudás <br>  
+    Német – kezdő</h3>
+</div>
+<div id="s1"><img src="312015246_489104759807604_4611186649456021511_n.jpg" alt=""></div>
+</main>
 </body>
 </html>
-
