--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <h3 id="doboz">Angol – tárgyalóképes nyelvtudás <br>  
     Német – kezdő</h3>
 </div>
-<div id="s1"><img src="312015246_489104759807604_4611186649456021511_n.jpg" alt=""></div>
+<div id="s1"><img class="s1"  alt=""></div>
 </main>
 </body>
 </html>
