Delete .html in url

--- a/sign.html
+++ b/sign.html
@@ -108,7 +108,7 @@
         <div class="form-group">
           <input class="send" type="submit" value="sign up" />
         </div>
-        <a href="/index.html" class="signup-link"> Login here.</a>
+        <a href="/index" class="signup-link"> Login here.</a>
 
       </form>
     </div>
