--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
     <title>Login and Sign Up</title>
     <style>
       body {
@@ -91,7 +92,7 @@
         <div class="form-group">
           <input class="send" type="submit" value="Login" />
         </div>
-        <a href="/sign.html" class="signup-link"
+        <a href="/sign" class="signup-link"
           >Don't have an account? <br />
           Sign up here.</a
         >
