--- a/sign.html
+++ b/sign.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="hu"></html>
 <html>
   <head>
@@ -7,7 +6,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="refresh" content="5" />
+    <!-- <meta http-equiv="refresh" content="5" /> -->
+    <script src="mobil.js"></script>
+    
     <style>
       body {
         font-family: sans-serif;
@@ -108,7 +109,7 @@
         <div class="form-group">
           <input class="send" type="submit" value="sign up" />
         </div>
-        <a href="/login" class="signup-link"> Login here.</a>
+        <a href="/login" class="signup-link" id="signup-link"> Login here.</a>
 
       </form>
     </div>
