--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
     <script src="mobil.js"></script>
     <style>
       body {
+        zoom: 150%;
         font-family: sans-serif;
         background-color: #1b1b1b;
         color: white;
