--- a/sign.html
+++ b/sign.html
@@ -11,6 +11,7 @@
     
     <style>
       body {
+        zoom: 150%;
         font-family: sans-serif;
         background-color: #1b1b1b;
         color: white;
